--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -15,7 +15,8 @@
             android:layout_marginTop="70dp"
             android:elevation="14dp"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:padding="20dp"
+            android:gravity="center">
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -55,6 +56,16 @@
                     android:paddingTop="5dp"
                     android:paddingRight="2dp"
                     android:text="@string/credential_activity_user_password_lost" />
+
+                <Button
+                    android:id="@+id/login_fragment_summit"
+                    android:layout_gravity="center"
+                    android:background="@android:color/white"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/credential_activity_login_button"
+                    android:elevation="15dp"
+                    android:layout_marginTop="5dp"/>
             </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
