add, styles to buttons

--- a/app/src/main/res/layout/signin_fragment.xml
+++ b/app/src/main/res/layout/signin_fragment.xml
@@ -12,10 +12,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="1dp"
             android:elevation="14dp"
             android:orientation="vertical"
-            android:padding="20dp">
+            android:padding="1dp">
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -78,8 +78,33 @@
                         android:inputType="textPassword" />
                 </android.support.design.widget.TextInputLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/signin_fragment_take_photo"
+                        android:text="@string/credential_activity_take_photo"
+                        android:drawableLeft="@drawable/ic_photo"
+                        android:drawableTint="@color/colorPrimaryText"
+                        style="@style/SoaButton"/>
+                    <Button
+                        android:id="@+id/signin_fragment_select_sports"
+                        android:text="@string/credential_activity_select_sports"
+                        android:drawableLeft="@drawable/ic_sports"
+                        android:drawableTint="@color/colorPrimaryText"
+                        style="@style/SoaButton"/>
 
-
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/signin_fragment_summit"
+                        android:text="@string/credential_activity_tab_signin"
+                        style="@style/SoaButton"/>
+                </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
