--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -56,16 +56,15 @@
                     android:paddingTop="5dp"
                     android:paddingRight="2dp"
                     android:text="@string/credential_activity_user_password_lost" />
-
-                <Button
-                    android:id="@+id/login_fragment_summit"
-                    android:layout_gravity="center"
-                    android:background="@android:color/white"
-                    android:layout_width="170dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/credential_activity_login_button"
-                    android:elevation="15dp"
-                    android:layout_marginTop="5dp"/>
+                    android:orientation="horizontal">
+                    <Button
+                        android:id="@+id/login_fragment_summit"
+                        android:text="@string/credential_activity_login_button"
+                        style="@style/SoaButton"/>
+                </LinearLayout>
             </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
