--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,13 +34,14 @@
 
     <style name="SoaButton">
         <item name="android:layout_gravity"> center</item>
-        <item name="android:background">@android:color/white </item>
+        <item name="android:background">@drawable/rounded_button</item>
         <item name="android:layout_width">wrap_content </item>
         <item name="android:layout_height">wrap_content </item>
         <item name="android:textColor"> @color/colorPrimaryText</item>
         <item name="android:elevation">15dp</item>
         <item name="android:padding">4dp </item>
-        <item name="android:layout_margin">5dp </item>
+        <item name="android:layout_margin">1dp </item>
+
         <item name="android:layout_weight">1 </item>
     </style>
 
