--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -32,6 +32,7 @@
                         android:drawableLeft="@drawable/ic_person"
                         android:drawableTint="@android:color/white"
                         android:singleLine="true"
+                        android:text="jnavcamacho@gmail.com"
                         android:hint="@string/credential_activity_user_email"
                         android:inputType="textEmailAddress" />
                 </android.support.design.widget.TextInputLayout>
@@ -44,6 +45,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="16dp"
                         android:singleLine="true"
+                        android:text="jnavcamacho"
                         android:drawableLeft="@drawable/ic_key"
                         android:drawableTint="@android:color/white"
                         android:hint="@string/credential_activity_user_password"
