--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="140dp"
         android:background="@color/colorPrimaryDark"
-        android:layout_marginBottom="20dp">
+        android:layout_marginBottom="20dp"
+        android:gravity="center">
         <ImageView
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
@@ -83,11 +84,24 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                        android:orientation="horizontal"
+                        android:layout_marginBottom="30dp"
+                        android:layout_marginTop="20dp">
                         <Button
                             android:id="@+id/login_fragment_summit"
                             android:text="@string/credential_activity_login_button"
                             style="@style/SoaButton"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_gravity="right">
+                        <Button
+                            android:id="@+id/login_signin_fragment_summit"
+                            android:text="@string/credential_activity_tab_signin"
+                            style="@style/SoaButton"
+                            android:padding="15dp"/>
                     </LinearLayout>
                 </LinearLayout>
             </RelativeLayout>
