--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,7 @@
         <item name="android:elevation">15dp</item>
         <item name="android:padding">4dp </item>
         <item name="android:layout_margin">1dp </item>
-
+        <item name="android:textSize">12dp </item>
         <item name="android:layout_weight">1 </item>
     </style>
 
