--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
                             android:drawableLeft="@drawable/ic_person"
                             android:drawableTint="@android:color/white"
                             android:singleLine="true"
-                            android:text="jnavcamacho@gmail.com"
+                            android:text="soauser@mail.com"
                             android:hint="@string/credential_activity_user_email"
                             android:inputType="textEmailAddress" />
                     </android.support.design.widget.TextInputLayout>
@@ -68,7 +68,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="16dp"
                             android:singleLine="true"
-                            android:text="jnavcamacho"
+                            android:text="soauser"
                             android:drawableLeft="@drawable/ic_key"
                             android:drawableTint="@android:color/white"
                             android:hint="@string/credential_activity_user_password"
