--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".UserProfileActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="310dp">
@@ -14,16 +20,17 @@
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:orientation="vertical">
-            <de.hdodenhof.circleimageview.CircleImageView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_gravity="center_horizontal"
-                android:id="@+id/profileImg"
+
+            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/profile_profileImg"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/icon"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="55dp"
-                app:civ_border_color="#FF000000"/>
+                android:src="@drawable/icon"
+                app:civ_border_color="#FF000000" />
             <TextView
+                android:id="@+id/profile_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="UserName UserSurName"
@@ -35,7 +42,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Job title"
+                android:text="Usuario"
                 android:layout_gravity="center_horizontal"
                 android:textColor="@color/colorPrimaryText"
                 android:textSize="15sp"/>
@@ -61,9 +68,10 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Photos"
+                        android:text="Equipos"
                         android:textSize="15dp"/>
                     <TextView
+                        android:id="@+id/profile_teams"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="15"
@@ -80,11 +88,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Followers"
+                        android:text="Seguidores"
                         android:textSize="15dp"
                         android:textColor="@color/colorPrimaryText"
                         />
                     <TextView
+                        android:id="@+id/profile_seguidores"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="217"
@@ -102,101 +111,120 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Following"
+                        android:text="Desafíos"
                         android:textSize="15dp"/>
+
                     <TextView
+                        android:id="@+id/profile_desafios"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="15"
-                        android:textStyle="bold"
                         android:padding="7dp"
+                        android:text="15"
                         android:textColor="@color/colorPrimaryText"
-                        android:textSize="15dp"/>
+                        android:textSize="15dp"
+                        android:textStyle="bold" />
                 </LinearLayout>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
     </RelativeLayout>
+
     <LinearLayout
         android:layout_width="280dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_gravity="center"
-        android:layout_marginTop="15dp">
+        android:layout_marginTop="8dp"
+        android:orientation="vertical"
+
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:src="@drawable/ic_email"/>
+                android:src="@drawable/ic_email" />
+
             <TextView
-                android:paddingLeft="20dp"
-                android:layout_gravity="center_vertical"
+                android:id="@+id/profile_email_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="user@gotouch.com"/>
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="20dp"
+                android:text="user@gotouch.com"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:src="@drawable/ic_email"/>
+                android:src="@drawable/ic_email" />
+
             <TextView
-                android:paddingLeft="20dp"
-                android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="+506 8888 0000"/>
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="20dp"
+                android:text="+506 8888 0000"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:src="@drawable/ic_sports"/>
+                android:src="@drawable/ic_sports" />
+
             <TextView
-                android:paddingLeft="20dp"
-                android:layout_gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="add to group"/>
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="20dp"
+                android:text="add to group"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:src="@drawable/ic_key"/>
+                android:src="@drawable/ic_key" />
+
             <TextView
-                android:paddingLeft="20dp"
-                android:layout_gravity="center_vertical"
+                android:id="@+id/profile_user_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingLeft="20dp"
                 android:text=" show all comments"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
-
-
+        <Button
+            android:id="@+id/profile_edit_button_"
+            style="@style/SoaButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Editar Perfil"/>
 
 
     </LinearLayout>
 
-
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
