--- a/app/src/main/res/layout/newsitem.xml
+++ b/app/src/main/res/layout/newsitem.xml
@@ -5,6 +5,7 @@
     android:layout_margin="5dp">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/card_news"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="0dp">
@@ -42,6 +43,8 @@
                 android:text="Description"
                 android:layout_below="@+id/textItemHead"
                 android:layout_toRightOf="@+id/cardview_image"/>
+
+
 
 
         </RelativeLayout>
